--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib"
-}
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "css.validate": false,
+    "tailwindCSS.emmetCompletions": true,
+    "scss.validate": false,
+    "editor.quickSuggestions": {
+      "strings": true
+    },
+    "editor.inlineSuggest.enabled": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "explicit"
+    }
+  }
