--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-website",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.1",
-    "bootstrap": "^5.3.3",
-    "next": "15.1.6",
-    "react": "^19.0.0",
+    "next": "14.0.0",
+    "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
-    "react-bootstrap": "^2.10.8",
-    "react-dom": "^19.0.0",
-    "react-typed": "^2.0.12"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
+    "topology-renderer": "^0.1.4",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.15",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.1",
-    "typescript": "^5"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.7.3"
   }
 }
