--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.474.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
     "topology-renderer": "^0.1.4",
